# hospital_mng_sys

./: .gitignore  CMakeLists.txt  readme.md
app/: main.cpp
include/: hospital.h  mng.hpp  patient.h  person.h  types.h
src/: hospital.cpp  patient.cpp  person.cpp
